--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
+    "react-bootstrap": "^2.9.1"
   }
 }
