--- a/server/package.json
+++ b/server/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodeserver": "^0.9.1"
+  }
 }
